--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -1,5 +1,5 @@
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll
+name: Deploy Wasm app
 
 on:
   # Runs on pushes targeting the default branch
@@ -28,15 +28,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
+      - uses: actions/setup-java@v3
         with:
-          source: ./
-          destination: ./_site
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+          distribution: 'temurin'
+          java-version: '17'
+      - name: Build
+        run: |
+          ./gradlew :composeApp:wasmJsBrowserDistribution
 
   # Deployment job
   deploy:
@@ -49,5 +47,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        with: 
+        with:
           publish_dir: build/dist/wasmJs/productionExecutable
