--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -32,6 +32,8 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
       - name: Build
         run: |
           ./gradlew :composeApp:wasmJsBrowserDistribution
