--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -38,16 +38,8 @@ jobs:
         run: |
           ./gradlew :composeApp:wasmJsBrowserDistribution
 
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          publish_dir: build/dist/wasmJs/productionExecutable
+          branch: main
+          folder: composeApp/build/dist/wasmJs/productionExecutable
