--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -38,8 +38,14 @@ jobs:
         run: |
           ./gradlew :composeApp:wasmJsBrowserDistribution
 
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.5
-        with:
-          branch: main
-          folder: composeApp/build/dist/wasmJs/productionExecutable
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
