--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -4,7 +4,7 @@ name: Deploy Wasm app
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -38,14 +38,14 @@ jobs:
         run: |
           ./gradlew :composeApp:wasmJsBrowserDistribution
 
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+    # Deployment job
+    # deploy:
+    # environment:
+    #   name: github-pages
+    #    url: ${{ steps.deployment.outputs.page_url }}
+    #   runs-on: ubuntu-latest
+    # needs: build
+    # steps:
+    #   - name: Deploy to GitHub Pages
+    #       id: deployment
+    #     uses: actions/deploy-pages@v4
